# flake-templates

./: README.md  flake.nix
blank/: .editorconfig  .envrc  flake.nix
jupyter-lab/: default.nix  requirements.txt
python-poetry/: flake.nix
python-poetry-app/: .gitignore  flake.nix  pyproject.toml
rust/: Dockerfile  default.nix
rustup/: flake.nix
