[tool.poetry]
name = "python-test4"
version = "0.1.0"
description = ""
authors = ["Yuri de Wit <ydewit@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.scripts]
app = 'app.main:main'

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
